--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#banner {
+  margin-top: 80px;
 }
+
+#banner h1 {
+  font-size: 46px;
+  line-height: 70px;
+}
+
+#banner p {
+  font-size: 20px;
+  line-height: 34px;
+}
+
+#banner button {
+  border-radius: 20px 20px 10px 10px;
+}
+
+#special p {
+  font-size: 20px;
+  line-height: 25px;
+}
+
+#special h4 {
+  font-size: 32px;
+  line-height: 40px;
+}
+/*# sourceMappingURL=index.css.map */
